# RestLink

./: CMakeLists.txt  README.md  RestLink.asta
docs/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt
examples/blagues/: AppSettings.qml  BasicJokeView.qml  CMakeLists.txt  Joke.qml  JokePage.qml  JokeView.qml  MyToolBar.qml  ShareOption.qml  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf
examples/blagues/android/: AndroidManifest.xml
examples/client/: CMakeLists.txt  main.cpp  qml.qrc  qtquickcontrols2.conf
examples/client/qml/: ApiConfigPage.qml  ApiRequestPage.qml  ApiRequestParameterDelegate.qml  AppPage.qml  AppToolBar.qml  MainPage.qml  main.qml
examples/custom/: CMakeLists.txt  main.cpp  usercontroller.cpp  usercontroller.h
examples/store/: App.qml  AppBar.qml  CMakeLists.txt  CategoryEditDialog.qml  CategoryItemDelegate.qml  CategoryListPage.qml  ConfigurationPage.qml  ProductDetailsPage.qml  ProductItemDelegate.qml  ProductListPage.qml  ResponseViewer.qml  StoreApi.qml  main.cpp
examples/tmdb/: CMakeLists.txt  Main.qml  MediaDelegate.qml  MediaDelegateTest.qml  Tmdb.qml  TmdbApi.qml  TmdbConfig.json  TmdbSearchRequest.qml  main.cpp  main.qml  qml.qrc
examples/tmdb-desktop/: CMakeLists.txt  main.cpp
examples/tmdb/android/: AndroidManifest.xml
src/: .gitignore  CMakeLists.txt  RestLinkConfig.cmake.in  apibase.cpp  apibase.h  apibase_p.h
src/cli/: CMakeLists.txt  app.cpp  app.h  main.cpp
src/core/: CMakeLists.txt  api.cpp  api.h  api_p.h  apibase.cpp  apibase.h  apibase_p.h  apicache.cpp  apicache.h  apicache_p.h  apiconfigurationdownload.cpp  apiconfigurationdownload.h  apiconfigurationdownload_p.h  apireply.cpp  apireply.h  apireply_p.h  apirequest.cpp  apirequest.h  apirequest_p.h  apirequestinterceptor.cpp  apirequestinterceptor.h  cache.h  compressionutils.cpp  compressionutils.h  config.h  config.h.in  debug.cpp  debug.h  global.h  header.cpp  header.h  jsonutils.h  pathparameter.cpp  pathparameter.h  queryparameter.h  queryparameter_p.h  request.cpp  request.h  request_p.h  requestinterceptor.cpp  (+3 more)
src/excel/: CMakeLists.txt  exceldocument.cpp  exceldocument.h  excelplugin.cpp  excelplugin.h  excelserver.cpp  excelserver.h  excelserver_p.h  excelsheet.cpp  excelsheet.h  metadata.json
src/import/: Api.qml  ApiParameter.qml  ApiRequest.qml  ApiRequestParameter.qml  CMakeLists.txt  RequestParameter.qml  RestLinkQml.cmake  api.cpp  api.h  qmldir  request.cpp  request.h  requestparameter.cpp  requestparameter.h  restlinkapi.cpp  restlinkapi.h  restlinkapirequest.cpp  restlinkapirequest.h  restlinkplugin.cpp  restlinkplugin.h  types.h
src/import/RestLink/: Api.qml  ApiParameter.qml  ApiReply.qml  ApiRequest.qml  ApiRequestParameter.qml  CMakeLists.txt  Request.qml  RequestParameter.qml  api.cpp  api.h  request.cpp  request.h  restlinkapi.cpp  restlinkapi.h  restlinkapirequest.cpp  restlinkapirequest.h  restlinkplugin.cpp
src/import/core/: api.cpp  api.h  request.cpp  request.h  requestparameter.cpp  requestparameter.h  types.cpp  types.h  utils.cpp  utils.h
src/lib/: CMakeLists.txt  abstractrequesthandler.cpp  abstractrequesthandler.h  abstractrequesthandler_p.h  abstractrequestinterceptor.cpp  abstractrequestinterceptor.h  api.cpp  api.h  api_p.h  apibase.cpp  apibase.h  apibase_p.h  body.cpp  body.h  body_p.h  cache.cpp  cache_p.h  compressionutils.cpp  compressionutils.h  config.h.in  cookiejar.cpp  fileutils.cpp  fileutils.h  global.h  header.cpp  header.h  header_p.h  jsonutils.cpp  networkmanager.cpp  networkmanager.h  parameter.cpp  parameter.h  parameter_p.h  parameterlist.cpp  parameterlist.h  pathparameter.cpp  pathparameter.h  pathparameter_p.h  queryparameter.cpp  queryparameter.h  (+22 more)
src/lib/mock/: CMakeLists.txt  mockmanager.cpp  mockmanager.h  mockreply.cpp  mockreply.h  mockreply_p.h
src/lib/network/: CMakeLists.txt  cache.cpp  cache_p.h  cookiejar.cpp  cookiejar.h  cookiejar_p.h  httputils.cpp  httputils.h  httputils_p.h  networkmanager.cpp  networkmanager.h  networkresponse.cpp  networkresponse.h  networkresponse_p.h
src/lib/plugin/: CMakeLists.txt  plugin.cpp  plugin.h  plugin_p.h  pluginmanager.cpp  pluginmanager.h  pluginmanager_p.h
src/lib/server/: CMakeLists.txt  abstractcontroller.cpp  abstractcontroller.h  abstractserverworker.cpp  abstractserverworker.h  abstractserverworker_p.h  resourcecontroller.cpp  resourcecontroller.h  server.cpp  server.h  server_p.h  serverrequest.cpp  serverrequest.h  serverresponse.cpp  serverresponse.h  serverresponse_p.h
src/lib/sql/: CMakeLists.txt  sqlhandler.cpp  sqlhandler.h  sqlhandler_p.h  sqlresponse.cpp  sqlresponse.h  sqlresponse_p.h  sqlserver.cpp  sqlserver.h  sqlutils.cpp  sqlutils.h
src/lib/thread/: CMakeLists.txt  internalresponse.cpp  internalresponse.h  internalresponse_p.h  simpleresponse.cpp  simpleresponse.h  simpleresponse_p.h  threadednetworkhandler.cpp  (+2 more)
src/sql/: CMakeLists.txt  api.cpp  api.h  crudinterface.cpp  crudinterface.h  debug.cpp  debug.h  global.h  jsonutils.cpp  jsonutils.h  metadata.json  model.cpp  model.h  modelcontroller.cpp  modelcontroller.h  modelmanager.cpp  modelmanager.h  parseddata.cpp  parseddata.h  plugin.cpp  plugin.h  querybuilder.cpp  querybuilder.h  queryrunner.h  relation.cpp  relation.h  relation_api_impl.cpp  relation_api_impl.h  relation_base_impl.cpp  relation_base_impl.h  relationinfo.cpp  relationinfo.h  resourceinfo.cpp  resourceinfo.h  router.cpp  router.h  sqldatabase.cpp  sqldatabase.h  sqldatabaseinfo.cpp  sqldatabaseinfo.h  (+11 more)
tests/: CMakeLists.txt  main.cpp
tests/core/: CMakeLists.txt  testapi.cpp  testapi.h
tests/sql/: CMakeLists.txt  belongstomanytest.cpp  belongstomanytest.h  belongstoonerelationtest.cpp  belongstoonerelationtest.h  belongstorelationtest.cpp  belongstorelationtest.h  hasmanyrelationtest.cpp  hasmanyrelationtest.h  hasonerelationtest.cpp  hasonerelationtest.h  main.cpp  metadatatest.cpp  metadatatest.h  modeltest.cpp  modeltest.h  queryrunnertest.cpp  queryrunnertest.h  querytest.cpp  querytest.h  relationtest.cpp  relationtest.h  sqllog.cpp  sqllog.h  sqltest.cpp  sqltest.h
(+73 files in other folders)
